Added a few more db/collection helpers for mongo; Refactored some code; Added new tiltify routes to cache donations and calculate stats;

--- a/example.env
+++ b/example.env
@@ -1,2 +1,4 @@
 MONGO_CONNECTION_STRING="mongodb://root:password@localhost"
 DATABASE_NAME=dbname
+TILTIFY_APP_TOKEN=abcdefghijklmnopqrstuvwxyz
+FRONTEND_BASE_URL="https://stats.example.com"
