--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tiltify-donation-stats",
+  "name": "donation-analytics-core",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
