--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "types": "src/express-request.d.ts",
   "scripts": {
-    "build": "rimraf ./build && tsc",
+    "clean": "rimraf ./build",
+    "build": "tsc",
     "start": "npm run build && node build/index.js",
     "start:dev": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
