--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "clean": "rimraf ./build",
     "build": "tsc",
-    "start": "npm run build && node build/index.js",
+    "postinstall": "tsc",
+    "start": "node build/index.js",
     "start:dev": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -28,6 +29,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongodb": "^3.6.9"
+    "mongodb": "^3.6.9",
+    "postinstall": "^0.7.4"
   }
 }
